--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 
+<ul id="chat"></ul>
+
+<form>
+  <textarea rows="8" cols="80" id="message"></textarea>
+  <br>
+  <button type="submit">Send</button>
+</form>
 
 <script src="main.js"></script>
 
